# DevTools

./: .gitignore
DeadCodeFinderCLI/: Package.resolved  Package.swift  Package.swift.indxdb
DeadCodeFinderCLI/Sources/DeadCodeFinder/: CallGraph.swift  DeadCodeDetector.swift  DeadCodeFinder.swift  DeadCodeFinder.swift.indxdb  IndexStore.swift  IndexStore.swift.indxdb  IndexStore.swift.swift  Main.swift.indxb  Models.swift  Models.swift.indxdb  ProjectParser.swift  SyntaxAnalyzer.swift
fgit/: CMakeLists.txt  Readme.md  fgit.cpp
mitmproxy/: README.md  filter_script.py  filter_script_hex.py  log.txt
pptt/: CMakeLists.txt  pptt.cpp
swift_dead_code/: swift_dead_code_analyzer.pl  swift_dead_code_analyzer.pl.v1  swift_dead_code_analyzer.pl.v2  swift_dead_code_analyzer.pl.v3-with-AST  swift_dead_code_analyzer.pl.v4-with-AST  swift_dead_code_analyzer.pl.v5-with-AST-and_entry_points
